fix text overflow and edit button

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,5 @@
 .profile__edit-button {
+  position: relative;
   background: url(../../../images/Edit-Button.svg);
   background-repeat: no-repeat;
   background-size: contain;
@@ -6,7 +7,8 @@
   height: 18px;
   border: none;
   padding: 0;
-  margin-left: 10px;
+  bottom: 5px;
+  left: 10px;
 }
 
 .profile__edit-button:hover {
@@ -18,6 +20,7 @@
   .profile__edit-button {
     width: 24px;
     height: 24px;
-    margin-left: 18px;
+    bottom: 10px;
+    left: 18px;
   }
 }
